--- a/css/main.css
+++ b/css/main.css
@@ -24,10 +24,25 @@ body {
     padding: 40px;
     float: left;
     background-color: #0054ac;
+    color: #fff;
 }
 .container > .right-column {
     width: 60%;
     padding: 60px;
     float: left;
     background-color: #fff;
+}
+
+.main-title {
+    font-weight: normal;
+}
+
+.bottom-links {
+    color: #fff8;
+}
+.bottom-links > .link {
+    color: #fff8;
+}
+.bottom-links > .link:hover {
+    color: #fff;
 }
