--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,10 @@ body {
     padding: 40px;
     float: left;
     background-color: #0054ac;
+    background-image: url(../img/hill.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     color: #fff;
 }
 .container > .right-column {
