--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ body {
     padding: 60px;
     float: left;
     background-color: #fff;
+    position: relative;
 }
 
 .main-title {
@@ -49,6 +50,18 @@ body {
 }
 .bottom-links > .link:hover {
     color: #fff;
+}
+
+.close {
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    line-height: 60px;
+    font-size: 50px;
+    transform: rotate(45deg);
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 .right-column span {
