--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,10 @@ body {
 .container {
     display: inline-block;
     width: 800px;
-    margin-top: 100px;
-    margin-left: calc(50% - 400px);
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .container > .left-column {
