--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,16 @@ body {
     background-color: #33b5db;
 }
 
+.bg {
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img/hill.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    filter: blur(10px);
+}
+
 .container {
     display: inline-block;
     width: 800px;
